# derive-visitor-enum

./: Cargo.toml  README.md
src/: data_structure.rs  lib.rs  visitor.rs  visitor_unit.rs
