[package]
name = "derive-visitor-enum"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Derive visitor traits for a recursive enum"
homepage = "https://github.com/ryo33/derive-visitor-enum"
repository = "https://github.com/ryo33/derive-visitor-enum"
readme = "README.md"
keywords = ["macro", "derive", "visitor", "enum", "ast"]
categories = ["development-tools"]


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
pretty_assertions = "1.3"
